--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tonaljs/tonal": "^4.6.5",
     "@types/jest": "^27.5.0",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
