--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.5",
+    "styled-reset": "^4.4.0",
     "tone": "^14.7.77",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
