--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-range": "^1.8.12",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
     "redux-devtools-extension": "^2.13.9",
