--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-range": "^1.8.12",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
+    "react-spring-bottom-sheet": "^3.4.1",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.4.0",
